--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 
 <section class="hero">
   	<div class="hero-inner">
-	    <img src="{{ site.author.thumb | prepend: site.baseurl }}" alt="author thumb" class="dot">
+	    <img src="/images/portrait.jpg" alt="author thumb" class="dot">
 	    <div class="font18">Hi,I’m LisaZ</div> 	
 	    <div class="font16">一枚交互小学生的进阶日常  </div>
 	</div>
