--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
   	<div class="hero-inner">
 	    <img src="/images/portrait.jpg" alt="author thumb" class="dot">
 	    <div class="font18">Hi,I’m LisaZ</div> 	
-	    <div class="font16">一枚交互小学生的进阶日常  </div>
+	    <div class="font16">一枚交互小学生的进阶日常!  </div>
 	</div>
 </section>
 
